# FerrumProxy

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  config.example.yml  問題点.md
.cargo/: config.toml
.github/workflows/: ferrumproxy-build.yml  ferrumproxy-client-build.yml  ferrumproxygui-build.yml
FerrumClient/: OfficialServer.json  README.md  package.json  tsconfig.json
FerrumClient/frontend/: package.json
FerrumClient/src/: clientCli.ts  relayShareClient.ts  sharedServiceManager.test.ts  sharedServiceManager.ts
FerrumClient/src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
FerrumGUI/: .gitignore  README.md  package.json  tsconfig.json
FerrumGUI/frontend/: index.html  package.json  vite.config.ts
FerrumGUI/scripts/: generate-embed-files.ts
FerrumGUI/src/: authManager.ts  configManager.ts  downloader.ts  index.ts  processManager.ts  selfUpdate.ts  services.ts  sharedServiceManager.test.ts  (+1 more)
FerrumGUI/src-tauri/: tauri.conf.json
benches_udp/: README.md  bench-config.yml  bench_client.py  echo_server.py  run_bench.ps1  run_bench.py  udp_bench.ps1  udp_echo.ps1
docs/: FerrumProxy.md  FerrumProxyClient.md  FerrumProxyGUI.md  configuration.md  listeners.md  manager-api.md  shared-service-design.md
scripts/: build-all.ps1  build-all.sh  gen-version-json.mjs
src/: bedrock.rs  config.rs  ddos_guard.rs  discord.rs  firewall.rs  http_rewrite.rs  main.rs  management_api.rs  manager_api.rs  proxy_protocol.rs  runtime.rs  shared_relay.rs  tcp.rs  tcp_tuning.rs  tls_config.rs  token_security.rs  udp.rs  webhook_queue.rs
(+49 files in other folders)
